--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nanocodes Sign-up Page</title>
     <link rel="stylesheet" href="./Css/nano.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css" integrity="sha512-9xKTRVabjVeZmc+GUW8GgSmcREDunMM+Dt/GrzchfN8tkwHizc5RP4Ok/MXFFy5rIjJjzhndFScTceq5e6GvVQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css"
+        integrity="sha512-9xKTRVabjVeZmc+GUW8GgSmcREDunMM+Dt/GrzchfN8tkwHizc5RP4Ok/MXFFy5rIjJjzhndFScTceq5e6GvVQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -16,10 +18,11 @@
                 <h2>Signup</h2>
                 <p id="welcome">Welcome to Nanocodes Programming</p>
                 <form id="form">
-                    <input type="text" name="name" id="first-name" placeholder="Enter your first name" required> <br> <br>
+                    <input type="text" name="name" id="first-name" placeholder="Enter your first name" required> <br>
+                    <br>
                     <input type="text" name="name" id="last-name" placeholder="Enter your last name" required> <br> <br>
-                    <input type="email" name="email" id="email"  placeholder="Enter your email" required> <br> <br>
-                        <select name="country" id="country" required>
+                    <input type="email" name="email" id="email" placeholder="Enter your email" required> <br> <br>
+                    <select name="country" id="country" required>
                         <option value="+93">Afghanistan (+93)</option>
                         <option value="+355">Albania (+355)</option>
                         <option value="+1684">Algeria (+1-684)</option>
@@ -169,17 +172,20 @@
                         <option value="+977">Nepal (+977)</option>
                         <option value="+31">Netherlands (+31)</option>
                         <option value="+599">Netherlands Antilles (+599)</option>
-                    </select> 
-                <br> <br>
-                    <input type="number" id="phone-number" name="number" placeholder="Enter your phone number" required> <br> <br>
+                    </select>
+                    <br> <br>
+                    <input type="number" id="phone-number" name="number" placeholder="Enter your phone number" required>
+                    <br> <br>
                     <span>
-                        <input type="password" id="password" name="password" placeholder="Enter a strong password" required> <br> <br>
-                    <!-- <i id="see-password" class="fa-solid fa-eye fa-flip-both" style="color: #9ca3af;"></i> -->
-                    <!-- <i id="hide-password" class="fa-solid fa-eye-slash" style="color: #9ca3af;"></i> -->
+                        <input type="password" id="password" name="password" placeholder="Enter a strong password"
+                            required> <br> <br>
+                        <!-- <i id="see-password" class="fa-solid fa-eye fa-flip-both" style="color: #9ca3af;"></i> -->
+                        <!-- <i id="hide-password" class="fa-solid fa-eye-slash" style="color: #9ca3af;"></i> -->
                     </span>
                     <button type="submit" id="sign-up">Sign Up</button>
                 </form>
-                <p id="log-in-alternative">Already have an account? <a href="#" class="login-link">Log in </a></p>
+                <p id="log-in-alternative">Already have an account? <a href="https://sparks042.github.io/Nano-login/"
+                        class="login-link">Log in </a></p>
             </div>
         </div>
     </div>
